# ml-catalogue

./: .claude-hub.jsonl  .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  VISION.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/executor/: __init__.py  config.py  models.py  preamble.py  sandbox.py  security.py
backend/app/routes/: chat.py  execute.py
backend/tests/: conftest.py  test_chat.py  test_executor.py  test_routes.py  test_sandbox_security.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: chat.ts  execute.ts
frontend/src/components/: CodeBlock.tsx  ErrorBoundary.tsx  MarkdownRenderer.tsx  OutputArea.tsx  PageSkeleton.tsx  RunButton.tsx  SearchDialog.tsx  Sidebar.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/components/__demo__/: CodeBlockDemo.tsx  MarkdownDemo.tsx  RunOutputDemo.tsx
frontend/src/components/qa-assistant/: ChatDialog.tsx  QAAssistant.tsx  QAToolsContext.tsx  ScreenshotCapture.tsx  SettingsDialog.tsx  Toolbox.tsx  index.ts
frontend/src/components/ui/: progress.tsx  tooltip.tsx
frontend/src/config/: content.ts
frontend/src/config/content/: index.ts  types.ts
frontend/src/hooks/: useProgress.ts
frontend/src/layouts/: RootLayout.tsx
frontend/src/lib/: search.ts
frontend/src/pages/: HomePage.tsx  NotFound.tsx  PageView.tsx
(+27 files in other folders)
